...
"library.removeBook" = "Remove book";
"library.downloadWholeBook" = "Download entire book";
"library.convertWholeBook" = "Convert entire book";
"library.all" = "All";
"library.allBooks" = "All books";
"library.importError" = "Import error";
"library.ok" = "OK";
"library.searchPlaceholder" = "Search library";
"library.caching" = "Caching";
"library.offline" = "Offline";

/* SettingsView */
"settings.title" = "Settings";
...
